Update 'w6b1jr22d-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:d505d7c5aab52fcb327c4a1c70567cd3e8b90dc8@sha256:74010b789746268066d045ae7d789e152c9738a86456af88d70912527f26c436

--- a/components/w6b1jr22d-python/overlays/development/deployment-patch.yaml
+++ b/components/w6b1jr22d-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: w6b1jr22d-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:d505d7c5aab52fcb327c4a1c70567cd3e8b90dc8@sha256:74010b789746268066d045ae7d789e152c9738a86456af88d70912527f26c436
+          name: container-image
